--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
           <div class="card h-100">
             <a href="images/05Rent.png"><img class="card-img-top" src="images/05Rent.png" alt="US Median Rents"></a>
             <div class="card-body">
-              <h4 class="card-title"><a taget = "_blank" href="">Housing Affordability</a>
+              <h4 class="card-title"><a taget = "_blank" href="https://eba287.github.io/rent/index.html">Housing Affordability</a>
               </h4>
               <p class="card-text">Rental housing within the United States is increasingly unaffordable. In fact, a 2016 report by the National Low Income Housing Coalition (NLIHC) found that in no U.S. state, metropolitan area, or county could a full-time worker earning the prevailing minimum wage afford a modest two-bedroom apartment. This interactive web map explores the median rent in counties across the nation.</p>
             </div>
