--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
           <div class="card h-100">
             <a href="images/05Rent.png"><img class="card-img-top" src="images/05Rent.png" alt="US Median Rents"></a>
             <div class="card-body">
-              <h4 class="card-title"><a taget = "_blank" href="https://eba287.github.io/rent/index.html">Housing Affordability</a>
+              <h4 class="card-title"><a target = "_blank" href="https://eba287.github.io/rent/index.html">Housing Affordability</a>
               </h4>
               <p class="card-text">Rental housing within the United States is increasingly unaffordable. In fact, a 2016 report by the National Low Income Housing Coalition (NLIHC) found that in no U.S. state, metropolitan area, or county could a full-time worker earning the prevailing minimum wage afford a modest two-bedroom apartment. This interactive web map explores the median rent in counties across the nation.</p>
             </div>
@@ -101,7 +101,7 @@
             <a href="images/04NZ.png"><img class="card-img-top" src="images/04NZ.png" alt="New Zealand"></a>
             <div class="card-body">
               <h4 class="card-title">
-                <a taget = "_blank" href="https://www.newzealand.com/us/">New Zealnd Tourism</a>
+                <a target = "_blank" href="https://eba287.github.io/NZ/index.html">New Zealnd Tourism</a>
               </h4>
               <p class="card-text">With active volcanoes, snowcapped peaks, glacier lakes, and sandy beaches, New Zealand offers visitors a never ending list of new adventures waiting to be explored. Inspired by the New Zealand tourist board, this web map shows a perfect seven day road trip featuring some of the North Island's most famous attractions. </p>
             </div>
@@ -123,7 +123,7 @@
             <a href="images/06NO.png"><img class="card-img-top" src="images/06NO.png" alt="New Orleans"></a>
             <div class="card-body">
               <h4 class="card-title">
-                <a taget = "_blank" href="https://www.neworleans.com/">New Orleans Tourism</a>
+                <a target = "_blank" href="https://www.neworleans.com/">New Orleans Tourism</a>
               </h4>
               <p class="card-text">Located near the Gulf of Mexico, and on the Mississippi River, New Orleans is known for its virbat nightlife, live music scene and unique cuisine. This interactive Leaflet map shows some of the key points of interest for exploring everything that New Orleans offers.</p>
             </div>
