--- a/rent/index.html
+++ b/rent/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset=utf-8 />
-  <title>Lab 09 Starter</title>
+  <title>Housing Affordability</title>
   <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
 
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css" integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ==" crossorigin="" />
