--- a/rent/index.html
+++ b/rent/index.html
@@ -123,7 +123,7 @@
 
 <body>
   <header>
-    <h1>Rental Housing Affordability</h1>
+    <h1>Rental Housing Affordability, 2015</h1>
   </header>
 
   <div id='map'></div>
