--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
             <a href="images/06NO.png"><img class="card-img-top" src="images/06NO.png" alt="New Orleans"></a>
             <div class="card-body">
               <h4 class="card-title">
-                <a target = "_blank" href="https://www.neworleans.com/">New Orleans Tourism</a>
+                <a target = "_blank" href="https://eba287.github.io/NO/index.html">New Orleans Tourism</a>
               </h4>
               <p class="card-text">Located near the Gulf of Mexico, and on the Mississippi River, New Orleans is known for its virbat nightlife, live music scene and unique cuisine. This interactive Leaflet map shows some of the key points of interest for exploring everything that New Orleans offers.</p>
             </div>
