--- a/NO/index.html
+++ b/NO/index.html
@@ -4,7 +4,7 @@
 
 <head>
   <meta charset=utf-8 />
-  <title>Lab 05 Work Template</title>
+  <title>Explore New Orleans</title>
 
   <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
   <link rel='icon' href='https://newmapsplus.github.io/favicon.ico' type='image/x-icon' />
