--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <a href="images/02codes.png"><img class="card-img-top" src="images/02codes.png" alt="Code violations"></a>
             <div class="card-body">
               <h4 class="card-title">
-                <a target = "_blank" href="https://eba287.github.io/codes-LEX/">Code Enforcement: A weapon of gentrification?</a>
+                <a target = "_blank" href="codes-LEX">Code Enforcement: A weapon of gentrification?</a>
               </h4>
               <p class="card-text"> While code enforcement violations ideally ensure safe housing conditions, they are increasing scrutnized as an adminstrative tool that spurs gentrification and unfairly benefits property developers. This interactive web map explores patterns of code enforcement violations in Lexington, KY. </p>
             </div>
@@ -90,7 +90,7 @@
           <div class="card h-100">
             <a href="images/05Rent.png"><img class="card-img-top" src="images/05Rent.png" alt="US Median Rents"></a>
             <div class="card-body">
-              <h4 class="card-title"><a target = "_blank" href="https://eba287.github.io/rent/index.html">Housing Affordability</a>
+              <h4 class="card-title"><a target = "_blank" href="rent">Housing Affordability</a>
               </h4>
               <p class="card-text">Rental housing within the United States is increasingly unaffordable. In fact, a 2016 report by the National Low Income Housing Coalition (NLIHC) found that in no U.S. state, metropolitan area, or county could a full-time worker earning the prevailing minimum wage afford a modest two-bedroom apartment. This interactive web map explores the median rent in counties across the nation.</p>
             </div>
@@ -101,7 +101,7 @@
             <a href="images/04NZ.png"><img class="card-img-top" src="images/04NZ.png" alt="New Zealand"></a>
             <div class="card-body">
               <h4 class="card-title">
-                <a target = "_blank" href="https://eba287.github.io/NZ/index.html">New Zealnd Tourism</a>
+                <a target = "_blank" href="NZ">New Zealnd Tourism</a>
               </h4>
               <p class="card-text">With active volcanoes, snowcapped peaks, glacier lakes, and sandy beaches, New Zealand offers visitors a never ending list of new adventures waiting to be explored. Inspired by the New Zealand tourist board, this web map shows a perfect seven day road trip featuring some of the North Island's most famous attractions. </p>
             </div>
