--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
               <h4 class="card-title">
                 <a target = "_blank" href="codes-LEX">Code Enforcement: A weapon of gentrification?</a>
               </h4>
-              <p class="card-text"> While code enforcement violations ideally ensure safe housing conditions, they are increasing scrutnized as an adminstrative tool that spurs gentrification and unfairly benefits property developers. This interactive web map explores patterns of code enforcement violations in Lexington, KY. </p>
+              <p class="card-text"> While code enforcement violations ideally ensure safe housing conditions, they are increasing scrutinized as an administrative tool that spurs gentrification and unfairly benefits property developers. This interactive web map explores patterns of code enforcement violations in Lexington, KY. </p>
             </div>
           </div>
         </div>
@@ -125,7 +125,7 @@
               <h4 class="card-title">
                 <a target = "_blank" href="https://eba287.github.io/NO/index.html">New Orleans Tourism</a>
               </h4>
-              <p class="card-text">Located near the Gulf of Mexico, and on the Mississippi River, New Orleans is known for its virbat nightlife, live music scene and unique cuisine. This interactive Leaflet map shows some of the key points of interest for exploring everything that New Orleans offers.</p>
+              <p class="card-text">Located near the Gulf of Mexico, and on the Mississippi River, New Orleans is known for its vibrant nightlife, live music scene and unique cuisine. This interactive Leaflet map shows some of the key points of interest for exploring everything that New Orleans offers.</p>
             </div>
           </div>
         </div>
