example of modal for preview images

--- a/index.html
+++ b/index.html
@@ -66,12 +66,30 @@
       <div class="row">
         <div class="col-lg-4 col-sm-6 portfolio-item">
           <div class="card h-100">
-            <a href="images/01Transition.png"><img class="card-img-top" src="images/01Transition.png" alt="Neighborhood transition" ></a>
+            <a href="#" data-toggle="modal" data-target="#neighborhood"><img class="card-img-top" src="images/01Transition.png" alt="Neighborhood transition" ></a>
             <div class="card-body">
               <h4 class="card-title">
                 <a target = "_blank" href="https://nmp.carto.com/u/eba287/builder/a154b449-91ac-47b7-98ae-feea549343a0/embed">Dimensions of neighborhood transition and affordable housing, Lexington, KY</a>
               </h4>
               <p class="card-text">Securing safe and affordable housing is one of the most pressing issues currently faced by cities across the world. This interactive CARTO map layers several indicators of affordable housing, gentrification and urban change.</p>
+            </div>
+          </div>
+        </div>
+        <!-- Modal: Dimensions of neighborhood transition and affordable housing, Lexington, KY -->
+        <div id="neighborhood" class="modal fade " role="dialog">
+          <div class="modal-dialog modal-lg">
+            <!-- Modal content-->
+            <div class="modal-content bg-light">
+              <div class="modal-body text-dark">
+                <img src="images/01Transition.png" width="100%" class="rounded">
+                <h3 class="mt-2">Preview</h3>
+                <h4 class="card-title">
+                  <a target = "_blank" href="https://nmp.carto.com/u/eba287/builder/a154b449-91ac-47b7-98ae-feea549343a0/embed">Dimensions of neighborhood transition and affordable housing, Lexington, KY</a>
+                </h4>
+              </div>
+              <div class="modal-footer border-secondary border-0">
+                <button type="button" class="btn btn-default text-light bg-secondary " data-dismiss="modal">Close</button>
+              </div>
             </div>
           </div>
         </div>
