edits for displacement

--- a/index.html
+++ b/index.html
@@ -64,6 +64,18 @@
   <section id="projects" class="bg-light">
     <div class="container">
       <div class="row">
+
+        <div class="col-lg-4 col-sm-6 portfolio-item">
+          <div class="card h-100">
+            <a href="images/06NO.png"><img class="card-img-top" src="images/05Displacement.png" alt="New Orleans"></a>
+            <div class="card-body">
+              <h4 class="card-title">
+                <a target = "_blank" href="https://eba287.github.io/displacement/">Displaced: Exploring the racialized impacts of gentrification</a>
+              </h4>
+              <p class="card-text">While the disparate impacts of gentrification are widely documented, understanding the extent to which communities of color are being displaced remains relatively unclear. This interactive map explores demographic trends in Lexington, KY between 1990-2018.</p>
+            </div>
+          </div>
+        </div>
         <div class="col-lg-4 col-sm-6 portfolio-item">
           <div class="card h-100">
             <a href="images/01Transition.png"><img class="card-img-top" src="images/01Transition.png" alt="Neighborhood transition" ></a>
@@ -115,17 +127,6 @@
                 <a href="images/maps/SYR_ParksAme_8000px.png">Syracuse Parks & Amenities, 2019</a>
               </h4>
               <p class="card-text">The city of Syracuse offers its residents an abundance of green space. But, are these parks accessible and equally connected to other city amenities? This static map explores this relationship, with the intent of finding trails and amenities that are within walking distance of public parks. </p>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-4 col-sm-6 portfolio-item">
-          <div class="card h-100">
-            <a href="images/06NO.png"><img class="card-img-top" src="images/06NO.png" alt="New Orleans"></a>
-            <div class="card-body">
-              <h4 class="card-title">
-                <a target = "_blank" href="https://eba287.github.io/NO/index.html">New Orleans Tourism</a>
-              </h4>
-              <p class="card-text">Located near the Gulf of Mexico, and on the Mississippi River, New Orleans is known for its virbat nightlife, live music scene and unique cuisine. This interactive Leaflet map shows some of the key points of interest for exploring everything that New Orleans offers.</p>
             </div>
           </div>
         </div>
