--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
           <div class='my-5 clearfix'>
             <div class="float-md-left mb-5 mr-md-4"><img class="rounded-circle img-fluid" src="images/EmilyBarrett.jpg" alt=""></div>
             <p class="lead">Hi there, I'm Emily Barrett. I'm a geographer specializing in affordable housing, community-engaged mapping and urban planning. My work broadly explores the opportunities and challenges of using maps and their associated data-driven narratives within politically contentious discussions of gentrification and urban development. I am currently a Ph.D. student at Vanerbilt University.</p>
-            <p class=" mr-2"><i class="fa fa-github mr-2"></i><a href="https://github.com/eba287">Github: eba287   </a>|    <i class="fa fa-envelope mr-2"></i>emily.barrett@vanerbilt.edu></p>
+            <p class=" mr-2"><i class="fa fa-github mr-2"></i><a href="https://github.com/eba287">Github: eba287   </a>|    <i class="fa fa-envelope mr-2"></i>emily.barrett@vanerbilt.edu</p>
           </div>
         </div>
       </div>
